properly aligned the icons + revisied bugs in the code

--- a/assets/css/works.css
+++ b/assets/css/works.css
@@ -131,4 +131,11 @@
     border-top:3px solid black;
   } */
   
-  
+  footer div {
+    display: flex;
+    align-items: center;
+    margin-left: auto;
+    gap: 2rem;
+  }
+
+ 
